--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.3.6",
     "bootstrap": "^5.2.3",
+    "jquery": "^3.6.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0"
