--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,5 @@
 MONGO_URL= mongodb+srv://xzhang:Email!1978@crud.gpta1.mongodb.net/shop?retryWrites=true&w=majority
 PASS_SEC = Success
 JWT_SEC = Success
+STRIPE_KEY = 
 
