--- a/server/.env
+++ b/server/.env
@@ -2,4 +2,6 @@ MONGO_URL= mongodb+srv://xzhang:Email!1978@crud.gpta1.mongodb.net/shop?retryWrit
 PASS_SEC = Success
 JWT_SEC = Success
 STRIPE_KEY = 
-
+PAYPAL_CLIENT_ID = 
+PORT = 5000
+NODE_ENV =
