--- a/customer/package.json
+++ b/customer/package.json
@@ -13,13 +13,17 @@
     "@emotion/styled": "^11.10.8",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.3",
+    "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.3.6",
     "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.0",
     "react-slick": "^0.29.0",
+    "redux": "^4.2.1",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
