--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -10,13 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.3.6",
+    "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^0.27.1",
     "bootstrap": "^5.2.3",
     "jquery": "^3.6.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
